--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.jpa.properties.hibernate.format_sql=true
 server.port=0
 eureka.client.enabled=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=ALWAYS
